reorganize project structure and fix alignment of education panel

--- a/src/js/HomePage.scss
+++ b/src/js/HomePage.scss
@@ -1,14 +1,14 @@
-@import '../../sass/mixins';
-@import '../../sass/variables';
+@import '../sass/mixins';
+@import '../sass/variables';
 
 .section {
   margin: 0 auto;
-  padding:75px 0;
+  padding:4% 0;
   position: relative;
 
   .title-panel {
     text-align: center;
-    padding-bottom: 75px;
+    padding-bottom: 4%;
 
     .jumbotron-line {
       border-top: 3px solid;
@@ -27,7 +27,7 @@
 .category-title {
   font-size: $middle-font-size;
   font-weight: 700;
-  padding-bottom: 10px;
+  padding-bottom: 1%;
 }
 
 .category-text {
@@ -48,7 +48,7 @@
   width: 100%;
   height: 100%;
   color: white;
-  background-image: url('../../images/home-page-background.jpeg');
+  background-image: url('../images/home-page-background.jpeg');
   @include addResponsiveBackgroundImage;
 
   #header {
@@ -156,7 +156,7 @@
 
 #skills-container {
   #skills-intro-panel {
-    padding-bottom: 50px;
+    padding-bottom: 3%;
   }
 
   .logos-panel {
@@ -202,8 +202,8 @@
     text-align:center;
     align-items: center;
     justify-content: center;
-    .school {
-      padding: 25px;
+    #school {
+      max-width: 1250px !important;
       #department {
         color: orangered;
       }
@@ -212,7 +212,7 @@
         padding-bottom: 0px;
       }
       .category-text {
-        padding-top: 10px;
+        padding-bottom: 10px;
       }
     }
   }
